[package]
name = "lsm-log"
version = "0.1.0"
edition = "2021"

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-log = { git = "https://github.com/aya-rs/aya", branch = "main" }
lsm-log-common = { path = "../lsm-log-common" }
anyhow = "1.0.68"
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
bytes = "1.0"

[[bin]]
name = "lsm-log"
path = "src/main.rs"
